--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "firebase": "^4.12.1",
+    "moment": "^2.22.0",
     "npm": "^5.8.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.3.0-rc.2",
     "react-scripts": "1.1.4",
