--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "buffer": "^5.1.0",
+    "cropperjs": "^1.3.5",
     "firebase": "^4.12.1",
+    "fs": "0.0.1-security",
     "npm": "^5.8.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.3.0-rc.2",
     "react-scripts": "1.1.4",
-    "reactstrap": "^5.0.0-beta.3"
+    "reactstrap": "^5.0.0-beta.3",
+    "sharp": "^0.20.1",
+    "tesseract.js": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
