--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "firebase": "^4.12.1",
+    "material-ui": "^1.0.0-beta.42",
     "moment": "^2.22.0",
     "npm": "^5.8.0",
     "react": "^16.3.1",
