--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "buffer": "^5.1.0",
     "cropperjs": "^1.3.5",
     "firebase": "^4.12.1",
-    "material-ui": "^1.0.0-beta.42",
     "fs": "0.0.1-security",
+    "material-ui": "^0.20.0",
     "moment": "^2.22.0",
     "npm": "^5.8.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-cropper": "^1.0.1",
-    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.3.0-rc.2",
     "react-scripts": "1.1.4",
