--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cropperjs": "^1.3.5",
     "firebase": "^4.12.1",
     "fs": "0.0.1-security",
+    "image-js": "^0.20.1",
     "material-ui": "^0.20.0",
     "moment": "^2.22.0",
     "npm": "^5.8.0",
