--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "buffer": "^5.1.0",
     "cropperjs": "^1.3.5",
     "firebase": "^4.12.1",
+    "firebaseui": "^2.7.0",
     "fs": "0.0.1-security",
     "image-js": "^0.20.1",
     "material-ui": "^0.20.0",
@@ -16,6 +17,7 @@
     "react-bootstrap": "^0.32.1",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.3.1",
+    "react-firebaseui": "^1.2.3",
     "react-router-dom": "^4.3.0-rc.2",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0-beta.3",
