--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "^8.2.3",
     "bootstrap": "^4.1.0",
     "cropperjs": "^1.3.5",
     "firebase": "^4.13.1",
@@ -27,5 +28,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
+  }
 }
